# mbc-holders

./: LICENSE.md  README.md  playground.py  pyproject.toml  sync.py  test.py
alembic/versions/: 1640ab089b34_added_index_to_block_height.py  8263b99857cc_added_movements_to_block_model.py  9a1d4dfbe7bb_added_blockchain_models.py  9be738c770fd_added_some_unique_contraints.py  c02669fcbe2b_make_previous_blockhash_nullable.py  e97ca5f11ed3_added_address_model.py  fd4e079083ae_added_shortcut_to_input.py
app/: __init__.py  constants.py  parser.py
app/frontend/: router.py  service.py  utils.py
app/models/: __init__.py  address.py  block.py  input.py  output.py  transaction.py
app/sync/: __init__.py  chain.py
app/templates/elements/: pagination.html
app/templates/layout/: base.html  nav.html
app/templates/pages/: home.html
docs/: alembic.example.ini  holders.service  settings.example.toml
