[tool.poetry]
name = "microbitcoin-richlist"
version = "0.1.0"
description = "MicroBitcoin Richlist"
authors = ["volbil <volbilnexus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
dynaconf = "^3.2.4"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
apscheduler = "^3.10.4"
alembic = "^1.12.1"
aiohttp = "^3.9.3"
greenlet = "^3.0.3"
jinja2-fragments = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
exclude = [".venv", "venv", "alembic"]
extend-ignore = [
    "F821",  # Disable checks for annotated SQLAlchemy relations 
]
